--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="next.html">next.html</a>
   </div>
   <h1>kabo's profile</h1>
-  <div>yo</div>
+  <div>kuromi</div>
   <h2>stpr!!!</h2>
 </body>
 </html>
