--- a/index.html
+++ b/index.html
@@ -33,9 +33,26 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   <script>
+    let number = 1
+
     $(".btn").on('click', function(){
-      alert("クリックされました")
+      if (number == -1) {
+        number = 1
+      }else{
+        number = -1
+      }
     })
+
+    setInterval(function(){
+      if (number == -1){
+        return
+      }
+      $(".logo").attr("src","images/STPR" + number + ".PNG") 
+      number = number + 1
+      if (number > 4) {
+        number = 1
+      }
+    }, 3000)
   </script>
 </body>
 </html>
